--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
 
   <title>{% block title %}Unified Portal{% endblock %}</title>
 
+  <link rel="icon" type="image/x-icon" href="{% static 'icons/favicon.ico' %}">
+
   <!-- Vendor CSS -->
   <link
     rel="stylesheet"
