--- a/templates/files_base.html
+++ b/templates/files_base.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Dashboard{% endblock %}</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'icons/favicon.ico' %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Base CSS -->
